== 3.5.1 ==

* Fixed: pings don't send when using "Default subscription for registered users" setting
* Fixed: default membership is not truly added as a subscription http://wp.mu/94f
* Fixed: date format in settings not being used on subscriptions page
* Fixed: streamlined PayPal checkout process (will no longer request shipping address or notes)
* Fixed: PHP warning in free subscription gateway
* Fixed: when using PayPal Single Payments the member's existing subscription is not being dropped after upgrading

== 3.5.0.9 ==

*	Fixed: super admins and admins not able to view all content
*	Fixed: "view site as" not working when on front-end pages
*	Fixed: if using admin gateway and member clicks unsubscribe their subscription is instantly dropped instead of being flagged to expire at the subscription end period NOTE: if admin drops a member’s subscription from within wp-admin this will still instantly drop the member’s subscription.

== 3.5.0.8 ==

* Fixed: BuddyPress bug where first name and last name weren't saved correctly
* Fixed: CSS styling on renew form when using [renewform] shortcode
* Fixed: bug with category rules hiding some member's menus
* Fixed: call to undefined method Membership_Render_Page_Subscription_Renew::get_subscriptions() on renew form
* Fixed: BuddyPress compatability issues
* Fixed: bug with membership blocking Classifieds plugin virtual pages

== 3.5.0.7 ==

* Fixed: tables with mediumtext columns data type modified to text data type 

== 3.5.0.6 ==

* Fixed: disappearing menu bug

== 3.5.0.5 ==

* Fixed: rules in inactive access levels were still being applied

== 3.5.0.4 ==

* Additional fixes for category rules
 
== 3.5.0.3 ==

* Fixed: notices/warnings in menu

== 3.5.0.2 ==

* Fixed: category rules would apply to custom post types (e.g. menu items, etc) causing those elements to not show up
* Fixed: authorize.net errors when using a dripped content setup http://wp.mu/92g
* Fixed: remove old subscription when updating http://wp.mu/92h